--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
 								</ul>
 							</div>
 							<div class="copyright">
-Copyright &copy; All rights reserved | This webpage is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="http://tayqa.com" target="_blank">www.tayqa.com</a>
+Copyright &copy; All rights reserved | This webpage is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.tayqa.com" target="_blank">www.tayqa.com</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 						</div>
